fix display spacing

--- a/inst/htmljs/lda.css
+++ b/inst/htmljs/lda.css
@@ -21,3 +21,8 @@ text {
     font-family: sans-serif;
     font-size: 11px;
 }
+
+.svg-style {
+        display: block;
+        margin: auto;
+           }
